<resources>
    <string name="app_name">My Vault</string>

    <!-- LOGIN / SIGNUP -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="create_account_desc">Create an account or log in to explore about our app</string>
    <string name="text_or">Or</string>
    <string name="login1">Login</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="signup1">Signup</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="required_field">Required Field</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_error">Error</string>
    <string name="register_failed">Registration failed</string>
    <string name="login_failed">Login failed</string>
    <string name="common_error">There is an error. Please try again!!!…</string>
    <string name="application_website_name">Application / Website Name</string>
    <string name="username">Username</string>
    <string name="link">Link (optional)</string>
    <string name="length">Length</string>
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="lowercase">Lowercase</string>
    <string name="uppercase">Uppercase</string>
    <string name="add_password">Add Password</string>
    <string name="generate">Generate</string>
    <string name="save">Save</string>
    <string name="text_info_password">You can either generate a new password/pin or manually input one-it\'s up to you</string>
    <string name="please_select_at_least_one_option">Please select at least one option</string>
    <string name="expand_icon">expand icon</string>
    <string name="logout">Logout</string>
    <string name="app_version">Version: %1$s.%2$d</string>
    <string name="text_yes">Yes</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="enable_biometric">Enable Biometric</string>
    <string name="about_app">About App</string>
    <string name="download_passwords">Download Passwords</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="biometric_enabled_successfully">Biometric enabled successfully</string>
    <string name="enable_biometric_unlock">Enable Biometric Unlock</string>
    <string name="biometric_subtitle">Authenticate to enable biometric unlock for your vault</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="biometric_disabled">Biometric disabled</string>
    <string name="dark_mode">"Dark mode "</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="no_biometric_hardware_detected">No biometric hardware detected</string>
    <string name="biometric_hardware_unavailable">Biometric hardware unavailable</string>
    <string name="no_biometric_enrolled_on_this_device">No biometric enrolled on this device</string>
    <string name="security_update_required_to_use_biometrics">Security update required to use biometrics</string>
    <string name="biometric_type_not_supported_on_this_device">Biometric type not supported on this device</string>
    <string name="cannot_determine_biometric_status">Cannot determine biometric status</string>
    <string name="biometric_status_unknown">Biometric status unknown</string>
    <string name="unlock_with_biometrics">Unlock with Biometrics</string>
    <string name="use_your_fingerprint_or_face_to_continue">Use your fingerprint or face to continue</string>
    <string name="try_again">Try again</string>
    <string name="text_unlock">Unlock</string>
    <string name="password_manager_is_locked">Password Manager is locked</string>
    <string name="for_your_security_you_can_use_only_when_it_s_unlocked">For your security, you can use only when it\'s unlocked</string>
    <string name="session_expired">Session expired. Please login again.</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="category">Category</string>
    <string name="username_email">Username / Email</string>
    <string name="password_pin">Password / PIN</string>
    <string name="password_save_failed">Unable to save password</string>
    <string name="password_updated_failed">Unable to update password</string>
    <string name="password_saved_successfully">Password Saved Successfully</string>
    <string name="password_updated_successfully">Password Updated Successfully</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="strength">"Strength: "</string>
    <string name="change_icon">Change Icon</string>
    <string name="information">Information</string>
    <string name="internet_not_available">Please check your internet connection and try again.</string>
    <string name="icons">Icons</string>
    <string name="custom_icons"><u>Custom Icons</u></string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="download_sync_interval">Sync Interval</string>

    <string name="sync_interval_1">1 Hour</string>
    <string name="sync_interval_2">3 Hours</string>
    <string name="sync_interval_3">6 Hours</string>
    <string name="sync_interval_4">12 Hours</string>
    <string name="sync_interval_5">24 Hours</string>
    <string name="sync_interval_manual">Manual</string>
    <string name="favourites">Favourites</string>
    <string name="security">Security</string>
    <string name="synchronization">Synchronization</string>
    <string name="show_password">Show Password</string>
    <string name="set_as_favourite">Set as favourite</string>
    <string name="categories">Categories</string>
    <string name="no_categories_available">No categories available</string>
    <string name="no_passwords_available">No passwords available</string>
    <string name="excel_file_created">Excel file has been exported</string>
    <string name="pdf_file_created">PDF file has been exported</string>
    <string name="application_link">Application Link</string>
    <string name="no_passwords_found">No passwords found</string>
    <string name="passwords">Passwords</string>
    <string name="unable_to_create_folder">Unable to create folder!</string>
    <string name="no_data_found">No data found</string>

    <plurals name="password_count">
        <item quantity="one">%d Password</item>
        <item quantity="other">%d Passwords</item>
    </plurals>
</resources>